# Matrix

Matrix_bot/: CMakeLists.txt  package.xml
Matrix_bot/meshes/: lidar_sensor.STL
Matrix_bot/urdf/: Matrix_bot.urdf
matrix_bot/: CMakeLists.txt  package.xml
matrix_bot/config/: rviz.rviz
matrix_bot/launch/: display.launch  gazebo.launch  rsp.launch.py  sim.launch.py
matrix_bot/meshes/: base_link.STL  camera.STL  castor_wheel.STL  imu_sensor.STL  left_wheel.STL  right_wheel.STL
matrix_bot/urdf/: Matrix_bot.csv  Matrix_bot.urdf
